# factorial-server

./: README.md  factorial-server.cabal
snaplets/heist/templates/: Factorial1.tpl  Factorial2.tpl  base.tpl
src/: Application2.hs  Main0HW.hs  Main2Heist.hs  Site2.hs
src/0-hw/: Main.hs
src/1-html/: Main.hs
src/2-heist/: Site.hs
src/3-acid/: Application.hs  Main.hs  Site.hs
