Name:                factorial-server
Version:             0.1
Synopsis:            Factorial server
Description:         Demo Snap web (Factorial) servers of increasing complexity
License:             AllRightsReserved
Author:              Atze Dijkstra
Maintainer:          atze@uu.nl
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable factorial-server-0hw
  hs-source-dirs: src
  main-is: Main0HW.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
